--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -71,6 +71,51 @@ body,
   margin-right: 36px;
 }
 
+.centering {
+  width: 100%;
+}
+
+.form-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form-container form {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form-container form input {
+  width: 100%;
+  height: 25px;
+  font-size: 16px;
+  margin: 4px 0;
+}
+
+.form-container form button {
+  width: 100%;
+  margin: 4px 0;
+  font-size: 16px;
+}
+
 form {
   margin-top: 60px;
   display: -webkit-box;
