--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -60,6 +60,37 @@ body,
   margin-right: 36px;
 }
 
+.centering {
+  width: 100%;
+}
+
+.form-container {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+
+  form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    input {
+      width: 100%;
+      height: 25px;
+      font-size: 16px;
+      margin: 4px 0;
+    }
+
+    button {
+      width: 100%;
+      margin: 4px 0;
+      font-size: 16px;
+    }
+  }
+}
+
 form {
   margin-top: 60px;
   display: flex;
